chore(website): update submodule

--- a/locale/ja/crystal-website/_config.yml
+++ b/locale/ja/crystal-website/_config.yml
@@ -33,11 +33,13 @@ highlighter: rouge
 markdown: kramdown
 exclude:
 - "*.haml"
+- "*.nix"
 - docker-compose.yml
 - Gemfile
 - Gemfile.lock
 - Makefile
 - Rakefile
+- README.md
 - scripts/*.cr
 - vendor
 
