--- a/locale/ja/crystal-website/_data/blog_authors.json
+++ b/locale/ja/crystal-website/_data/blog_authors.json
@@ -50,6 +50,9 @@
   "ftarulla": {
     "name": "Francisco Tarulla"
   },
+  "lbarasti": {
+    "name": "Lorenzo Barasti"
+  },
   "makenowjust": {
     "name": "TSUYUSATO Kitsune (翻訳)"
   }
