fix(website): update

--- a/locale/ja/crystal-website/_data/opencollective.json
+++ b/locale/ja/crystal-website/_data/opencollective.json
@@ -1,22 +1,110 @@
 [
   {
-    "name": "Edward Loveall",
+    "name": "anapsix",
+    "url": "https://blog.random.io",
     "this_month": 5.0,
     "all_time": 5.0,
+    "since": "Dec 2, 2020"
+  },
+  {
+    "name": "Ryan Maki",
+    "logo": "sponsors/ryan_maki.png",
+    "this_month": 75.0,
+    "all_time": 75.0,
+    "since": "Dec 2, 2020"
+  },
+  {
+    "name": "I.I. Jeliuc Alexandr",
+    "url": "https://jeliuc.com",
+    "this_month": 10.0,
+    "all_time": 10.0,
+    "since": "Dec 1, 2020"
+  },
+  {
+    "name": "JoinGames",
+    "url": "https://joingames.net/",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Nov 25, 2020"
+  },
+  {
+    "name": "Dutchie",
+    "url": "https://dutchie.com",
+    "logo": "sponsors/dutchie.png",
+    "this_month": 150.0,
+    "all_time": 150.0,
+    "since": "Nov 23, 2020"
+  },
+  {
+    "name": "Dale C Earl",
+    "this_month": 100.0,
+    "all_time": 100.0,
+    "since": "Nov 23, 2020"
+  },
+  {
+    "name": "Kiirlaenud",
+    "url": "https://kiirlaenraha.ee/",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Nov 20, 2020"
+  },
+  {
+    "name": "Joppy",
+    "url": "https://www.joppy.me",
+    "this_month": 50.0,
+    "all_time": 50.0,
+    "since": "Nov 19, 2020"
+  },
+  {
+    "name": "Thanassis Papapostolou",
+    "this_month": 1.0,
+    "all_time": 1.0,
+    "since": "Nov 10, 2020"
+  },
+  {
+    "name": "Mark Raymond Jr.",
+    "this_month": 5.0,
+    "all_time": 10.0,
+    "since": "Nov 9, 2020"
+  },
+  {
+    "name": "ParticleBrand",
+    "url": "https://particlebrand.com",
+    "this_month": 5.0,
+    "all_time": 10.0,
+    "since": "Nov 8, 2020"
+  },
+  {
+    "name": "Ian Rash",
+    "this_month": 25.0,
+    "all_time": 50.0,
+    "since": "Oct 19, 2020"
+  },
+  {
+    "name": "GermanTechJobs",
+    "url": "https://germantechjobs.de/jobs/Java/All",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Oct 18, 2020"
+  },
+  {
+    "name": "Ricardo Tomasi",
+    "url": "https://ricardo.cc",
+    "this_month": 25.0,
+    "all_time": 75.0,
+    "since": "Oct 9, 2020"
+  },
+  {
+    "name": "Edward Loveall",
+    "this_month": 5.0,
+    "all_time": 15.0,
     "since": "Sep 29, 2020"
   },
   {
     "name": "Will Lewis",
     "this_month": 10.0,
-    "all_time": 10.0,
+    "all_time": 30.0,
     "since": "Sep 25, 2020"
-  },
-  {
-    "name": "SwissDev Jobs",
-    "url": "https://swissdevjobs.ch/jobs/Java/All",
-    "this_month": 5.0,
-    "all_time": 5.0,
-    "since": "Sep 24, 2020"
   },
   {
     "name": "Claudio G Macedo Jr",
@@ -27,7 +115,7 @@
   {
     "name": "Andrew Larin",
     "this_month": 5.0,
-    "all_time": 10.0,
+    "all_time": 20.0,
     "since": "Sep 15, 2020"
   },
   {
@@ -35,7 +123,7 @@
     "url": "https://www.vulk.coop",
     "logo": "sponsors/vulk_cooperative.png",
     "this_month": 75.0,
-    "all_time": 150.0,
+    "all_time": 300.0,
     "since": "Sep 10, 2020"
   },
   {
@@ -49,7 +137,7 @@
     "name": "Leonardo Kewitz",
     "url": "https://kewitz.js.org",
     "this_month": 5.0,
-    "all_time": 60.0,
+    "all_time": 70.0,
     "since": "Sep 9, 2020"
   },
   {
@@ -59,22 +147,16 @@
     "since": "Sep 8, 2020"
   },
   {
-    "name": "Turun Sahkomies",
-    "url": "https://www.turunsahkomies.fi",
+    "name": "Pro Tech Reviewer",
+    "url": "https://www.protechreviewer.com/",
     "this_month": 5.0,
     "all_time": 10.0,
-    "since": "Sep 8, 2020"
-  },
-  {
-    "name": "Xiuzhong Li",
-    "this_month": 5.0,
-    "all_time": 10.0,
-    "since": "Aug 31, 2020"
+    "since": "Sep 3, 2020"
   },
   {
     "name": "Philipp Claßen",
     "this_month": 10.0,
-    "all_time": 20.0,
+    "all_time": 40.0,
     "since": "Aug 27, 2020"
   },
   {
@@ -82,14 +164,14 @@
     "url": "https://www.nookwit.com/",
     "logo": "sponsors/nookwit.png",
     "this_month": 75.0,
-    "all_time": 150.0,
+    "all_time": 300.0,
     "since": "Aug 27, 2020"
   },
   {
     "name": "Leonardo Kewitz",
     "url": "https://kewitz.js.org",
     "this_month": 5.0,
-    "all_time": 60.0,
+    "all_time": 70.0,
     "since": "Aug 24, 2020"
   },
   {
@@ -103,7 +185,7 @@
     "name": "Speekify",
     "url": "https://speekify.com",
     "this_month": 5.0,
-    "all_time": 10.0,
+    "all_time": 20.0,
     "since": "Aug 20, 2020"
   },
   {
@@ -115,14 +197,14 @@
   {
     "name": "Randy Diaz",
     "this_month": 5.0,
-    "all_time": 15.0,
+    "all_time": 25.0,
     "since": "Aug 7, 2020"
   },
   {
     "name": "Matt Berry",
     "url": "https://mattrb.com",
     "this_month": 5.0,
-    "all_time": 15.0,
+    "all_time": 25.0,
     "since": "Aug 7, 2020"
   },
   {
@@ -130,13 +212,13 @@
     "url": "https://lewman.com",
     "logo": "sponsors/andrew_lewman.jpg",
     "this_month": 150.0,
-    "all_time": 450.0,
+    "all_time": 750.0,
     "since": "Aug 6, 2020"
   },
   {
     "name": "vinit joshi",
     "this_month": 5.0,
-    "all_time": 20.0,
+    "all_time": 25.0,
     "since": "Jul 14, 2020"
   },
   {
@@ -167,13 +249,13 @@
     "name": "Nobuaki Tanaka",
     "url": "https://twitter.com/tomerun",
     "this_month": 5.0,
-    "all_time": 25.0,
+    "all_time": 35.0,
     "since": "Jun 10, 2020"
   },
   {
     "name": "Oleksii Neishchenko",
     "this_month": 5.0,
-    "all_time": 25.0,
+    "all_time": 35.0,
     "since": "Jun 9, 2020"
   },
   {
@@ -181,38 +263,44 @@
     "url": "https://docspring.com",
     "logo": "sponsors/docspring.png",
     "this_month": 75.0,
-    "all_time": 375.0,
+    "all_time": 450.0,
     "since": "Jun 1, 2020"
   },
   {
     "name": "NekoIT",
     "url": "https://nekoit.xyz",
     "this_month": 10.0,
-    "all_time": 50.0,
+    "all_time": 70.0,
     "since": "May 31, 2020"
   },
   {
     "name": "Luan Dias",
     "this_month": 1.0,
-    "all_time": 5.0,
+    "all_time": 7.0,
     "since": "May 28, 2020"
   },
   {
     "name": "Artem Napolskih",
     "this_month": 5.0,
-    "all_time": 25.0,
+    "all_time": 35.0,
+    "since": "May 22, 2020"
+  },
+  {
+    "name": "Kevin Sjöberg",
+    "this_month": 25.0,
+    "all_time": 100.0,
     "since": "May 22, 2020"
   },
   {
     "name": "Glen Aultman-Bettridge",
     "this_month": 5.0,
-    "all_time": 30.0,
+    "all_time": 40.0,
     "since": "May 5, 2020"
   },
   {
     "name": "Szymon Madeja",
     "this_month": 5.0,
-    "all_time": 30.0,
+    "all_time": 40.0,
     "since": "May 5, 2020"
   },
   {
@@ -225,7 +313,7 @@
     "name": "Kagi",
     "url": "https://kagi.com",
     "this_month": 25.0,
-    "all_time": 175.0,
+    "all_time": 225.0,
     "since": "Apr 8, 2020"
   },
   {
@@ -237,7 +325,7 @@
   {
     "name": "Darwin",
     "this_month": 5.0,
-    "all_time": 35.0,
+    "all_time": 45.0,
     "since": "Apr 5, 2020"
   },
   {
@@ -250,7 +338,7 @@
     "name": "Hotmagma",
     "url": "https://sinulaen.ee",
     "this_month": 5.0,
-    "all_time": 35.0,
+    "all_time": 45.0,
     "since": "Mar 16, 2020"
   },
   {
@@ -262,21 +350,21 @@
   {
     "name": "Kasper Holbek Jensen",
     "this_month": 5.0,
-    "all_time": 40.0,
+    "all_time": 50.0,
     "since": "Mar 11, 2020"
   },
   {
     "name": "Braydon Kains",
     "url": "https://github.com/BKains",
     "this_month": 5.0,
-    "all_time": 40.0,
+    "all_time": 50.0,
     "since": "Mar 8, 2020"
   },
   {
     "name": "RemoteTeam.com",
     "url": "https://www.remoteteam.com",
     "this_month": 5.0,
-    "all_time": 40.0,
+    "all_time": 50.0,
     "since": "Feb 29, 2020"
   },
   {
@@ -296,20 +384,20 @@
   {
     "name": "Jonathan Gnagy",
     "this_month": 1.0,
-    "all_time": 48.0,
+    "all_time": 50.0,
     "since": "Oct 31, 2019"
   },
   {
     "name": "Raels Koder",
     "this_month": 25.0,
-    "all_time": 300.0,
+    "all_time": 350.0,
     "since": "Oct 30, 2019"
   },
   {
     "name": "Patric Vormstein",
     "url": "https://github.com/pvormste",
     "this_month": 5.0,
-    "all_time": 60.0,
+    "all_time": 70.0,
     "since": "Oct 25, 2019"
   },
   {
@@ -323,14 +411,8 @@
     "name": "Ryan Prior",
     "url": "https://www.ryanprior.com",
     "this_month": 5.0,
-    "all_time": 65.0,
+    "all_time": 75.0,
     "since": "Oct 7, 2019"
-  },
-  {
-    "name": "Austin Vecchio",
-    "this_month": 5.0,
-    "all_time": 65.0,
-    "since": "Oct 4, 2019"
   },
   {
     "name": "Michael Lang",
@@ -349,21 +431,21 @@
     "name": "WPsetup",
     "url": "https://wpsetup.org",
     "this_month": 5.0,
-    "all_time": 70.0,
+    "all_time": 80.0,
     "since": "Sep 2, 2019"
   },
   {
     "name": "Level UP Solutions",
     "url": "https://www.levups.com",
     "this_month": 5.0,
-    "all_time": 70.0,
+    "all_time": 80.0,
     "since": "Sep 1, 2019"
   },
   {
     "name": "Max Fierke",
     "url": "https://www.maxfierke.com",
     "this_month": 10.0,
-    "all_time": 160.0,
+    "all_time": 180.0,
     "since": "Jul 21, 2019"
   },
   {
@@ -375,7 +457,7 @@
   {
     "name": "Bernardo Anderson",
     "this_month": 2.0,
-    "all_time": 34.0,
+    "all_time": 36.0,
     "since": "Jun 1, 2019"
   },
   {
@@ -384,13 +466,6 @@
     "this_month": 20.0,
     "all_time": 20.0,
     "since": "Feb 23, 2019"
-  },
-  {
-    "name": "George Protacio-Karaszi",
-    "url": "https://hellogeorge.io",
-    "this_month": 10.0,
-    "all_time": 220.0,
-    "since": "Feb 6, 2019"
   },
   {
     "name": "Tom Metge",
@@ -429,7 +504,7 @@
     "name": "Julien Reichardt",
     "url": "https://github.com/j8r",
     "this_month": 25.0,
-    "all_time": 575.0,
+    "all_time": 625.0,
     "since": "Dec 13, 2018"
   },
   {
@@ -437,7 +512,7 @@
     "url": "https://www.blitline.com",
     "logo": "sponsors/blitline.png",
     "this_month": 75.0,
-    "all_time": 1725.0,
+    "all_time": 1875.0,
     "since": "Dec 12, 2018"
   }
 ]
